--- a/SistemaVentasBatia/appsettings.json
+++ b/SistemaVentasBatia/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "dbconnect": "Server=192.168.2.4;Database=TESTING;User Id=sa;Password=S1ng42019;"
-    //"dbconnect": "Server=192.168.2.4;Database=SINGA;User Id=sa;Password=S1ng42019;"
+    //"dbconnect": "Server=192.168.2.4;Database=TESTING;User Id=sa;Password=S1ng42019;"
+    "dbconnect": "Server=192.168.2.4;Database=SINGA;User Id=sa;Password=S1ng42019;"
     //"dbconnect": "Server=SISTEMAS;Database=SINGA;User Id=sa;Password=S1ng42019;"
   },
   "ProdOpt": {
