--- a/SistemaVentasBatia/appsettings.Development.json
+++ b/SistemaVentasBatia/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     //"dbconnect": "Server=DESKTOP-291TI12\\SQLEXPRESS;Database=SINGA2;User Id=JorgeMtz;Password=Proskater45;",
-    //"dbconnect": "Server=192.168.2.4;Database=TESTING;User Id=sa;Password=S1ng42019;",
-    "dbconnect": "Server=192.168.2.4;Database=SINGA;User Id=sa;Password=S1ng42019;"
+    "dbconnect": "Server=192.168.2.4;Database=TESTING;User Id=sa;Password=S1ng42019;",
+    //"dbconnect": "Server=192.168.2.4;Database=SINGA;User Id=sa;Password=S1ng42019;"
     //"dbconnect": "Server=SISTEMAS;Database=SINGA;User Id=sa;Password=S1ng42019;"
   },
   "ProdOpt": {
