--- a/SistemaVentasBatia/SistemaVentasBatia.csproj
+++ b/SistemaVentasBatia/SistemaVentasBatia.csproj
@@ -16,10 +16,13 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="DocX" Version="3.0.0" />
     <PackageReference Include="EPPlus" Version="7.0.10" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.26" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.IO.Packaging" Version="8.0.0" />
   </ItemGroup>
 
 	<ItemGroup>
@@ -43,6 +46,7 @@
 	  <None Remove="ClientApp\src\app\models\usuario.ts" />
 	  <None Remove="ClientApp\src\app\models\usuarioregistro.ts" />
 	  <None Remove="ClientApp\src\app\stores\StoreUser.ts" />
+	  <None Remove="ClientApp\src\app\widgets\contrato\contrato.widget.ts" />
 	  <None Remove="ClientApp\src\app\widgets\marcaventa\marcaventa.widget.ts" />
 	  <None Remove="ClientApp\src\app\widgets\puestolayout\puestolayout.widget.ts" />
 	  <None Remove="ClientApp\src\app\widgets\puesto\puesto.widget.ts" />
@@ -82,6 +86,9 @@
 	  </TypeScriptCompile>
 	  <TypeScriptCompile Include="ClientApp\src\app\models\usuario.ts" />
 	  <TypeScriptCompile Include="ClientApp\src\app\stores\StoreUser.ts" />
+	  <TypeScriptCompile Include="ClientApp\src\app\widgets\contrato\contrato.widget.ts">
+	    <SubType>Code</SubType>
+	  </TypeScriptCompile>
 	  <TypeScriptCompile Include="ClientApp\src\app\widgets\marcaventa\marcaventa.widget.ts">
 	    <SubType>Code</SubType>
 	  </TypeScriptCompile>
