--- a/SistemaVentasBatia/ClientApp/package.json
+++ b/SistemaVentasBatia/ClientApp/package.json
@@ -36,6 +36,7 @@
     "loader-utils": "^3.2.1",
     "mammoth": "^1.6.0",
     "minimatch": "^9.0.3",
+    "ng-angular-popup": "^0.5.2",
     "node-forge": "^1.3.1",
     "oidc-client": "~1.11.5",
     "popper.js": "^1.16.1",
