--- a/SistemaVentasBatia/appsettings.Development.json
+++ b/SistemaVentasBatia/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"dbconnect": "Server=192.168.2.4;Database=TESTING;User Id=sa;Password=S1ng42019;" //Servidor TESTING,  comentar encriptacion de contraseña para testing UsuarioService Ln:65
-    "dbconnect": "Server=192.168.2.4;Database=SINGA_TEST;User Id=sa;Password=S1ng42019;" //Servidor TESTING,  descomentar encriptacion de contraseña para testing UsuarioService Ln:65
-    //"dbconnect": "Server=192.168.2.4;Database=SINGA;User Id=sa;Password=S1ng42019;" //Servidor SINGA, descomentar encriptacion de contraseña para testing UsuarioService Ln:65
-    //"dbconnect": "Server=SISTEMAS;Database=SINGA;User Id=sa;Password=S1ng42019;"    //Base local,        comentar encriptacion de contraseña para testing UsuarioService Ln:65
+    //"dbconnect": "Server=192.168.2.4; Database=TESTING;    User Id=sa; Password=S1ng42019;"
+    //"dbconnect": "Server=192.168.2.4; Database=SINGA_TEST; User Id=sa; Password=S1ng42019;"
+      "dbconnect": "Server=192.168.2.4; Database=SINGA;      User Id=sa; Password=S1ng42019;"
+    //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sa; Password=S1ng42019;"
   },
   "ProdOpt": {
     "Equipo": [ 5, 6, 1012 ],
