--- a/SistemaVentasBatia/ClientApp/angular.json
+++ b/SistemaVentasBatia/ClientApp/angular.json
@@ -20,7 +20,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/assets"],
+            "assets": [ "src/assets" ],
+            "outputHashing": "all",
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
