Ajuste calculo materiales para Eventos

--- a/SistemaVentasBatia/appsettings.Development.json
+++ b/SistemaVentasBatia/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"dbconnect": "Server=192.168.2.4; Database=TESTING;    User Id=sa; Password=S1ng42019;"
-    //"dbconnect": "Server=192.168.2.4; Database=SINGA_TEST; User Id=sa; Password=S1ng42019;"
-      "dbconnect": "Server=192.168.2.4; Database=SINGA;      User Id=sa; Password=S1ng42019;"
-    //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sa; Password=S1ng42019;"
+    //"dbconnect": "Server=192.168.2.3; Database=TESTING;    User Id=sistemasgb; Password=S1st3mas@GB*;"
+    //"dbconnect": "Server=192.168.2.3; Database=SINGA_TEST; User Id=sistemasgb; Password=S1st3mas@GB*;"
+      "dbconnect": "Server=192.168.2.3; Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
+    //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
   },
   "ProdOpt": {
     "Equipo": [ 5, 6, 1012 ],
