--- a/SistemaVentasBatia/appsettings.json
+++ b/SistemaVentasBatia/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"dbconnect": "Server=192.168.2.4; Database=TESTING;    User Id=sa; Password=S1ng42019;"
-    //"dbconnect": "Server=192.168.2.4; Database=SINGA_TEST; User Id=sa; Password=S1ng42019;"
-      "dbconnect": "Server=192.168.2.4; Database=SINGA;      User Id=sa; Password=S1ng42019;"
-    //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sa; Password=S1ng42019;"
+    //"dbconnect": "Server=192.168.2.3; Database=TESTING;    User Id=sistemasgb; Password=S1st3mas@GB*;"
+    //"dbconnect": "Server=192.168.2.3; Database=SINGA_TEST; User Id=sistemasgb; Password=S1st3mas@GB*;"
+      "dbconnect": "Server=192.168.2.3; Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
+    //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
   },
   "ProdOpt": {
     "Equipo": [ 5, 6, 1012 ],
@@ -11,7 +11,7 @@
     "Material": [ 1, 2, 3, 1007, 1008, 1009 ],
     "Uniforme": [ 2018 ],
 
-    "EquipoOpe": [1012 ],
+    "EquipoOpe": [ 1012 ],
     "HerramientaOpe": [ 4 ],
     "MaterialOpe": [ 1, 2, 1007, 1008, 1009 ],
     "UniformeOpe": [ 2018 ]
