--- a/SistemaVentasBatia/appsettings.json
+++ b/SistemaVentasBatia/appsettings.json
@@ -8,12 +8,12 @@
   "ProdOpt": {
     "Equipo": [ 5, 6, 1012 ],
     "Herramienta": [ 4 ],
-    "Material": [ 1, 2, 3, 1007, 1008, 1009 ],
+    "Material": [ 1, 2, 3, 1007, 1008, 1009, 1014, 1016, 1017 ],
     "Uniforme": [ 2018 ],
 
     "EquipoOpe": [ 1012 ],
     "HerramientaOpe": [ 4 ],
-    "MaterialOpe": [ 1, 2, 1007, 1008, 1009 ],
+    "MaterialOpe": [ 1, 2, 1007, 1008, 1009, 1014, 1016, 1017 ],
     "UniformeOpe": [ 2018 ]
   },
   "Logging": {
