Ajuste cotizacion de seguridad

--- a/SistemaVentasBatia/appsettings.Development.json
+++ b/SistemaVentasBatia/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //"dbconnect": "Server=192.168.2.3; Database=TESTING;    User Id=sistemasgb; Password=S1st3mas@GB*;"
     //"dbconnect": "Server=192.168.2.3; Database=SINGA_TEST; User Id=sistemasgb; Password=S1st3mas@GB*;"
-      "dbconnect": "Server=192.168.2.3; Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
+    "dbconnect": "Server=192.168.2.3; Database=TESTING;      User Id=sistemasgb; Password=S1st3mas@GB*;"
     //"dbconnect": "Server=SISTEMAS;    Database=SINGA;      User Id=sistemasgb; Password=S1st3mas@GB*;"
   },
   "ProdOpt": {
@@ -14,7 +14,9 @@
     "EquipoOpe": [ 1012 ],
     "HerramientaOpe": [ 4 ],
     "MaterialOpe": [ 1, 2, 1007, 1008, 1009, 1014, 1016, 1017 ],
-    "UniformeOpe": [ 2018 ]
+    "UniformeOpe": [ 2018 ],
+
+    "Seguridad": [ 2028 ]
   },
   "Logging": {
     "LogLevel": {
