Entrega de proyecto a Alan M. Modificacion: Tokens aplicados, Interceptor en TS

--- a/SistemaVentasBatia/SistemaVentasBatia.csproj
+++ b/SistemaVentasBatia/SistemaVentasBatia.csproj
@@ -19,9 +19,11 @@
     <PackageReference Include="DocX" Version="3.0.0" />
     <PackageReference Include="EPPlus" Version="7.0.10" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.26" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.1" />
     <PackageReference Include="System.IO.Packaging" Version="8.0.0" />
   </ItemGroup>
 
